# SISTOPE-LAB1-1-2024

./: .gitignore  CMakeLists.txt  README.md
Ejemplos del ayudante/Ejemplos BMP/: main.c
LAB/: Makefile  clasificacion.c  clasificacion.h  estructuras.c  estructuras.h  filtros.c  filtros.h  funciones.c  lectura-escritura.c  lectura.c  lectura.h  main  main.c  resultados.c  superresultados
